# Travel-Pilot

./: README.md
backend/: agent.py  api.py  app.py  diagnose.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
