[project]
name = "airbnbmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "backoff==2.2.1",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.3",
    "distro==1.9.0",
    "fastapi==0.125.0",
    "filetype==1.2.0",
    "google-auth==2.45.0",
    "google-genai==1.56.0",
    "groq==0.37.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-pydantic==0.6",
    "jsonschema-specifications==2025.9.1",
    "langchain==1.1.3",
    "langchain-core==1.2.2",
    "langchain-google-genai==4.1.1",
    "langchain-groq==1.1.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.14",
    "langsmith==0.4.56",
    "markdown-it-py==4.0.0",
    "mcp==1.23.2",
    "mcp-use==1.5.0",
    "mdurl==0.1.2",
    "orjson==3.11.5",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "posthog==7.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "scarf-sdk==0.1.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==3.0.3",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.1",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
